# gb-io.py

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  COPYING  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml  publish.yml  requirements.txt  test.yml
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: feature.rst  functions.rst  index.rst  location.rst  qualifier.rst  reader.rst  record.rst  reference.rst  source.rst
docs/guide/: copyright.rst  index.rst  install.rst
gb_io/: __init__.py  lib.pyi
gb_io/lib/: build.rs  coa.rs  lib.rs  pyfile.rs
pkg/aur/: PKGBUILD.in
src/: iter.rs  lib.rs  pyfile.rs
src/gb_io/: __init__.py  lib.pyi
src/gb_io/lib/: coa.rs  dunder.rs  lib.rs  pyfile.rs  reader.rs
tests/: test_biopython.py  test_doctests.py  test_dump.py  test_load.py  test_location.py  test_record.py  unittests.rs
tests/data/: AY048670.1.faa  AY048670.1.gb
