[package]
name = "gb-io-py"
version = "0.3.2"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "MIT"
build = "gb_io/lib/build.rs"

[lib]
path = "gb_io/lib/lib.rs"
crate-type = ["cdylib", "rlib"]
name = "gb_io_py"
doctest = false

[build-dependencies.built]
version  = "0.7.1"
features = ["chrono", "cargo-lock"]

[dependencies]
libc = "0.2.62"
gb-io = "0.7.1"
pyo3-built = "0.5.0"
[dependencies.pyo3]
version = "0.20.0"

[dev-dependencies]
lazy_static = "1.4.0"

[features]
default = []
cpython = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]
