[package]
name = "gb-io-py"
version = "0.4.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "MIT"
build = "src/gb_io/lib/build.rs"

[lib]
path = "src/gb_io/lib/lib.rs"
crate-type = ["cdylib", "rlib"]
name = "gb_io_py"
doctest = false

[build-dependencies.built]
version  = "0.8.0"
features = ["chrono", "cargo-lock"]

[dependencies]
libc = "0.2.62"
gb-io = "0.9.0"
pyo3-built = "0.6.0"
[dependencies.pyo3]
version = "0.27"
features = ["py-clone"]

[dev-dependencies]
lazy_static = "1.4.0"

[features]
default = ["abi3"]
cpython = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]
abi3 = ["pyo3/abi3-py37"]
