[metadata]
name = gb-io
version = 0.2.0
author = Martin Larralde
author_email = martin.larralde@embl.de
home_page = https://github.com/althonos/gb-io.py
description = A Python interface to gb-io, a fast GenBank parser written in Rust.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = genbank, parser, sequence, record
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Rust
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/althonos/gb-io.py/issues

[options]
zip_safe = true
python_requires = >= 3.6
setup_requires =
    setuptools >=39.2
    setuptools-rust >=1.0

[bdist_wheel]
universal = false

[build_rust]
release = true
